--- a/2_task/src/index.css
+++ b/2_task/src/index.css
@@ -14,6 +14,16 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
 }
 
+a {
+  color: #80858F;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a:hover {
+  color: #FAC422;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
