--- a/2_task/src/components/common/ImageButton/ImageButton.module.css
+++ b/2_task/src/components/common/ImageButton/ImageButton.module.css
@@ -1,22 +1,24 @@
 .button {
-    border-radius: 1.25rem;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    transition: box-shadow linear 0.1s, background-color linear 0.1s;
+  border-radius: 1.25rem;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  transition:
+    box-shadow linear 0.1s,
+    background-color linear 0.1s;
 }
 
 .button:hover {
-    box-shadow: 0 0 0 0.6rem rgba(255, 255, 255, 0.02);
-    background-color: rgba(255, 255, 255, 0.02);   
+  box-shadow: 0 0 0 0.6rem rgba(255, 255, 255, 0.02);
+  background-color: rgba(255, 255, 255, 0.02);
 }
 
 .button.selected {
-    box-shadow: 0 0 0 0.6rem rgba(255, 255, 255, 0.06);
-    background-color: rgba(255, 255, 255, 0.06);
+  box-shadow: 0 0 0 0.6rem rgba(255, 255, 255, 0.06);
+  background-color: rgba(255, 255, 255, 0.06);
 }
 
 .button.selected:hover {
-    box-shadow: 0 0 0 0.6rem rgba(255, 255, 255, 0.08);
-    background-color: rgba(255, 255, 255, 0.08);
+  box-shadow: 0 0 0 0.6rem rgba(255, 255, 255, 0.08);
+  background-color: rgba(255, 255, 255, 0.08);
 }
