--- a/2_task/src/components/sections/CharacterSection/CharacterSection.module.css
+++ b/2_task/src/components/sections/CharacterSection/CharacterSection.module.css
@@ -1,14 +1,14 @@
 .container {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 3.75rem;
-    background-color: #2A313C;
-    align-items: center;
-    gap: 8rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 3.75rem;
+  background-color: #2a313c;
+  align-items: center;
+  gap: 8rem;
 }
 
 .characterSelection {
-    display: flex;
-    justify-content: space-between;
-    gap: 1.88rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 1.88rem;
 }
