--- a/2_task/src/index.css
+++ b/2_task/src/index.css
@@ -6,23 +6,28 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
-  color: #FFF;
+  color: #fff;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   font-weight: 400;
 }
 
 a {
-  color: #80858F;
+  color: #80858f;
   text-decoration: none;
   cursor: pointer;
   transition: color linear 0.1s;
 }
 
 a:hover {
-  color: #FAC422;
+  color: #fac422;
 }
 
 code {
