--- a/2_task/src/components/common/PreTitle/PreTitle.module.css
+++ b/2_task/src/components/common/PreTitle/PreTitle.module.css
@@ -3,8 +3,8 @@
 }
 
 .container {
-  margin-bottom: 0.88rem;
+  margin-bottom: 0.88em;
   display: flex;
-  gap: 0.5rem;
+  gap: 0.5em;
   text-transform: uppercase;
 }
