--- a/2_task/src/components/sections/LandingSection/Cart/Cart.module.css
+++ b/2_task/src/components/sections/LandingSection/Cart/Cart.module.css
@@ -9,14 +9,14 @@
   position: absolute;
   border-radius: 30%;
   background-color: #fff;
-  right: -1.2rem;
+  right: -1.2em;
   top: 0;
   align-self: flex-start;
-  font-size: 0.6875rem;
-  width: 1.3125rem;
-  line-height: 1.125rem;
-  height: 1.125rem;
+  font-size: 0.6875em;
+  width: 1.3125em;
+  line-height: 1.125em;
+  height: 1.125em;
   flex-shrink: 0;
-  border-radius: 0.5625rem;
+  border-radius: 0.5625em;
   color: #141820;
 }
