--- a/2_task/src/components/sections/NewsSection/NewsCard/NewsCard.module.css
+++ b/2_task/src/components/sections/NewsSection/NewsCard/NewsCard.module.css
@@ -14,11 +14,11 @@
 }
 
 .container > h2 {
-  font-size: 2.25rem;
+  font-size: 2.25em;
 }
 
 .container > h3 {
-  font-size: 1.5rem;
+  font-size: 1.5em;
 }
 
 .mainDate,
@@ -27,11 +27,11 @@
 }
 
 .mainDate {
-  margin: 3.36rem 0 1.75rem;
-  font-size: 1.125rem;
+  margin: 3.36em 0 1.75em;
+  font-size: 1.125em;
 }
 
 .secondaryDate {
-  margin: 1.86rem 0 1.25rem;
-  font-size: 1rem;
+  margin: 1.86em 0 1.25em;
+  font-size: 1em;
 }
