--- a/2_task/src/index.css
+++ b/2_task/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
   color: #fff;
+  font-size: 1rem;
 }
 
 h1,
@@ -43,4 +44,10 @@ button {
   font: inherit;
   cursor: pointer;
   outline: inherit;
+}
+
+@media screen and (max-width: 1460px) {
+  body {
+    font-size: 0.8rem;
+  }
 }
