--- a/2_task/src/components/sections/FooterSection/FooterSection.module.css
+++ b/2_task/src/components/sections/FooterSection/FooterSection.module.css
@@ -29,3 +29,18 @@
   font-size: 1.125em;
   margin-bottom: 1.5em;
 }
+
+@media screen and (max-width: 800px) {
+    .container {
+        flex-direction: column;
+        gap: 3em;
+    }
+
+    .infoContainer {
+        max-width: unset;
+    }
+
+    .logo {
+        margin-bottom: 1em;
+    }
+}
