--- a/2_task/src/components/sections/LandingSection/LandingSection.module.css
+++ b/2_task/src/components/sections/LandingSection/LandingSection.module.css
@@ -1,14 +1,21 @@
 .container {
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(90deg, black 54%, #57b8ff 54%, #57b8ff 100%);
   display: flex;
   flex-direction: column;
+  padding-bottom: 4em;
+  box-sizing: border-box;
 }
 
 .header {
   padding: 1.25em 3.75em;
   display: flex;
   justify-content: space-between;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
 }
 
 .cartContainer {
@@ -22,7 +29,7 @@
   padding-right: 3.75em;
 }
 
-.conent {
+.content {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
@@ -75,4 +82,51 @@
 .socialMediaContainer > a {
   padding: 0.4em;
   font-size: 0.675em;
+}
+
+@media screen and (max-width: 800px) {
+  .container {
+    background: black;
+  }
+
+  .header {
+    display: grid;
+    gap: 1em;
+    align-items: center;
+  }
+
+  .menu {
+    grid-template-columns: 1fr 1fr;
+    grid-column: auto / span 2;
+    grid-row-start: 1;
+    justify-self: center;
+    overflow-x: auto;
+    width: 100%;
+  }
+
+  .menu > button:first-child {
+    padding-left: 0;
+  }
+
+  .menu > button:last-child {
+    padding-right: 0;
+  }
+
+  .logo {
+    width: 50%;
+  }
+
+  .contentContainer {
+    display: grid;
+    grid-template-columns: 3.75em 1fr;
+  }
+
+  .socialMediaContainer {
+    grid-row: auto / span 2;
+  }
+
+  .content {
+    grid-row-start: 2;
+    grid-column-start: 2;
+  }
 }
