--- a/2_task/src/index.css
+++ b/2_task/src/index.css
@@ -20,6 +20,10 @@ h6 {
   font-weight: 400;
 }
 
+p {
+  margin: 0;
+}
+
 a {
   color: #80858f;
   text-decoration: none;
@@ -46,8 +50,14 @@ button {
   outline: inherit;
 }
 
-@media screen and (max-width: 1460px) {
+@media screen and (max-width: 1460px) and (min-width: 1270px) {
   body {
     font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 1270px) {
+  body {
+    font-size: 0.6rem;
   }
 }
