--- a/2_task/src/components/common/Button/Button.module.css
+++ b/2_task/src/components/common/Button/Button.module.css
@@ -1,7 +1,9 @@
 .button {
   color: #fff;
   padding: 1em 2em;
-  transition: color linear 0.1s, background-color linear 0.1s;
+  transition:
+    color linear 0.1s,
+    background-color linear 0.1s;
 }
 
 .button:hover {
