--- a/2_task/src/components/common/ImageButton/ImageButton.module.css
+++ b/2_task/src/components/common/ImageButton/ImageButton.module.css
@@ -22,3 +22,9 @@
   box-shadow: 0 0 0 0.6em rgba(255, 255, 255, 0.08);
   background-color: rgba(255, 255, 255, 0.08);
 }
+
+.button > img {
+  aspect-ratio: 171 / 100;
+  width: 100%;
+  height: auto;
+}
