--- a/2_task/src/components/sections/LandingSection/Cart/Cart.module.css
+++ b/2_task/src/components/sections/LandingSection/Cart/Cart.module.css
@@ -21,6 +21,12 @@
   padding: 0.2em;
 }
 
+.container > img {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1 / 1;
+}
+
 @media screen and (max-width: 800px) {
   .container > img {
     width: 50%;
