--- a/2_task/src/components/sections/NewsSection/NewsCard/NewsCard.module.css
+++ b/2_task/src/components/sections/NewsSection/NewsCard/NewsCard.module.css
@@ -21,6 +21,12 @@
   font-size: 1.5em;
 }
 
+.container > img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 .mainDate,
 .secondaryDate {
   color: #57b8ff;
