--- a/2_task/src/index.css
+++ b/2_task/src/index.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+@font-face {
+  font-family: 'Orbitron';
+  src: url('./static/fonts/Orbitron/static/Orbitron-Regular.ttf') format('truetype');
+  font-display: swap;
+}
 
 body {
   margin: 0;
@@ -50,7 +54,7 @@ button {
   outline: inherit;
 }
 
-@media screen and (max-width: 1460px) and (min-width: 1270px) {
+@media screen and (max-width: 1520px) and (min-width: 1270px) {
   body {
     font-size: 0.8rem;
   }
